Listo terminando los detalles

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ header{
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 16px;
+	margin-bottom: 10px;
 }
 
 a{
@@ -161,14 +162,16 @@ h1{
 	background: #eaeaea;
 	height: 35px;
 	line-height: 35px;
-	padding: 0 10px;
 	border: 1px solid gray;
 	margin: 0 5px;
 
 }
 
 .paginador a {
+	padding: 0 10px;
 	text-decoration: none;
+	display: block;
+	height: inherit;
 }
 
 .paginador li.selected {
